--- a/style.css
+++ b/style.css
@@ -1,35 +1,85 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+body{
+    margin: 0%;
+    padding: 0%;
+}
+section{
+    margin: 0px;
+    padding: 0px;
+    /* height: 100vh; */
+    border: 1em solid black;
+    background-image: linear-gradient(270deg, darkgrey, rgb(123, 123, 230));
+}
+.s1{
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 }
 
-body {
-  background-color: black;
+.s1 h1{
+    background-color: rgb(72, 73, 72);
+    color: white;
+    padding: 10px;
+    margin: 5px;
 }
 
-.contact-form {
-  margin: 1rem;
-  padding: 0.5rem;
-  background-color: yellowgreen;
-  height: 100vh;
+
+.content-box form{
+    margin: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.cfhead {
-  margin: 1rem;
-  padding: 0.5rem;
-  text-align: center;
-  color: rgb(9, 9, 87);
-  background-color: yellowgreen;
+form label{
+    margin 15px;
+    padding: 8px;
+    font-size: large;
+    font-weight: bold;
 }
 
-form {
-  text-align: center;
-  display: flex;
-  position: relative;
-  margin: 25px;
-  
+form input{
+    margin: 10px;
+    padding: 5px;
+    border: 4px solid rgb(250, 216, 21);
+    border-radius: 15px;
+    height: 30px;
+    font-size: medium;
 }
-form input {
-  height: 40px;
+
+form select{
+    height: 30px;
+    border-radius: 15px;
+    border: 5px solid rgb(250, 216, 21) ;
+    width: 150px;
+}
+
+form button{
+    margin: 15px;
+    padding: 5px;
+    width: 100px;
+    font-weight: bold;
+    height: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: yellow;
+    border-radius: 15px;
+    border-bottom: 3px solid orange;
+    border-right: 3px solid orange;
+}
+
+form button:hover{
+    color: white;
+}
+
+form textarea{
+    border: 5px solid rgb(250, 216, 21) ;
+    background-color: rgba(184, 135, 11, 0.479);
+    padding: 10px;
+    font-size: medium;
+    font-weight: 600;
+}
+form textarea ::placeholder{
+    color: white;
 }
