--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ form input{
     border: 4px solid rgb(250, 216, 21);
     border-radius: 15px;
     height: 30px;
+    width:250px
     font-size: medium;
 }
 
